tests/ui/resolve/cannot-find-value-in-scope-issue-22811.stderr
error[E0425]: cannot find value `foobar` in this scope
  --> $DIR/cannot-find-value-in-scope-issue-22811.rs:1:28
   |
LL | fn main() { println!("{}", foobar); }
   |                            ^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
