tests/ui/resolve/cannot-find-value-in-scope-issue-22811.rs
fn main() { println!("{}", foobar); } //~ ERROR cannot find value `foobar` in this scope

// https://github.com/rust-lang/rust/issues/22811
